syntax = "proto3";

package todo;
option go_package = "../generated/todopb";

message Todo {
    string todo_name = 1;
    string todo_list_name = 2;
    string content = 3;
    bool done = 4;
}

message TodoList {
    string todo_list_name = 2;
}

message CreateTodoListRequest {
    TodoList todo_list = 1;
}

message CreateTodoListResponse {
    string response = 1;
}

message CreateTodoRequest {
    Todo todo = 1;
}

message CreateTodoResponse {
    string response = 1;
}

service TodoService {
    rpc CreateTodoList (CreateTodoListRequest) returns (CreateTodoListResponse);
    rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse);
}